add_subdirectory(spinbox)
add_subdirectory(sqldelegate)
add_subdirectory(thread)
add_subdirectory(wizard)

set(MR_TIMETABLE_PLANNER_SOURCES
  ${MR_TIMETABLE_PLANNER_SOURCES}
  utils/colorview.h
  utils/colordelegate.h
  utils/file_format_names.h
  utils/imageviewer.h
  utils/jobcategorystrings.h
  utils/kmutils.h
  utils/owningqpointer.h
  utils/rs_types_names.h
  utils/rs_utils.h
  utils/session_rs_modes.h
  utils/types.h
  utils/combodelegate.h
  utils/model_roles.h
  utils/openfileinfolder.h
  utils/worker_event_types.h

  utils/colordelegate.cpp
  utils/colorview.cpp
  utils/combodelegate.cpp
  utils/imageviewer.cpp
  utils/kmutils.cpp
  utils/openfileinfolder.cpp
  utils/rs_utils.cpp
  PARENT_SCOPE
)
